compiler/tests-spec/testData/psi/templates/identifiers/import.kt
import org.jetbrains.<!ELEMENT!>.*

import <!ELEMENT!>

import <!ELEMENT!>.*;

import <!ELEMENT!>.*import <!ELEMENT!>

import org.jetbrains.kotlin as <!ELEMENT!>
